<?xml version="1.0"?>
<package format="3">
  <name>your_package_name</name>
  <version>0.0.1</version>
  <description>ROS 2 TF Marker Publisher</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>tf2_ros</build_depend>
  <run_depend>rviz_common</run_depend>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

